# edx-analytics-data-api

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .test_env  .travis.yml  AUTHORS  Dockerfile  Makefile  README.md  README.rst  client.cfg  db_keyword_overrides.yml  default.cfg  docker-compose.yml  groups  logging.cfg  manage.py  openedx.yaml  project.config  pylintrc  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: docker-compose-ci.yml
.github/workflows/: ci.yml  mysql8-migrations.yml  push-docker-images.yml  upgrade-python-requirements.yml
.travis/: docker-compose-travis.yml  run_coverage.sh  run_tests.sh
analytics_data_api/: docker_gunicorn_configuration.py  middleware.py  models.py  renderers.py  tests.py  throttles.py  urls.py  utils.py
analytics_data_api/constants/: country.py  educ_level.py  engagement_entity_types.py  engagement_events.py  engagement_types.py  enrollment_modes.py  genders.py  learner.py
analytics_data_api/fixtures/: countries.json  course_enrollment_birth_year.json  course_enrollment_country.json  course_enrollment_daily.json  course_enrollment_education.json  course_enrollment_gender.json  courses.json  education_levels.json  problem_response_answer_distribution.json  problem_response_answer_distribution_analytics_v1.json  single_course_activity.json
analytics_data_api/management/: utils.py
analytics_data_api/management/commands/: create_elasticsearch_learners_indices.py  delete_elasticsearch_learners_indices.py  generate_data.py  generate_fake_course_data.py  set_api_key.py  (+2 more)
analytics_data_api/tests/: test_jwt.py  test_middleware.py  test_renderers.py  test_throttles.py  test_utils.py
analytics_data_api/v0/: __init__.py  apps.py  connections.py  constants.py  documents.py  exceptions.py  managers.py  middleware.py  models.py  serializers.py  tests.py
analytics_data_api/v1/: __init__.py  apps.py  exceptions.py  middleware.py  models.py  serializers.py  urls.py
analyticsdata/: models.py  tests.py  urls.py  views.py
analyticsdata/fixtures/: single_course_activity.json
analyticsdata/migrations/: 0001_initial.py
analyticsdataclient/: client.py  course.py  status.py
analyticsdataclient/tests/: __init__.py  test_client.py  test_course.py  test_status.py
analyticsdataserver/: clients.py  logsettings.py  router.py  tests.py  urls.py  utils.py  views.py  wsgi.py
analyticsdataserver/settings/: analytics_api.yml  base.py  devstack.py  local.py  local_mysql.py  logger.py  production.py  test.py
analyticsdataserver/tests/: test_clients.py  test_router.py  test_utils.py  test_views.py  utils.py
api/: urls.py  wsgi.py
api/reportdata/: tests.py  urls.py
api/settings/: base.py
django-edx-reports/: README.md  setup.py
docs/api/: requirements.txt
docs/apiary/: apiary.apib
docs/decisions/: 01-pipeline-choice.rst  02-no-pii.rst
requirements/: base.in  base.txt  ci.in  ci.txt  common_constraints.txt  constraints.txt  default.txt  dev.in  dev.txt  django.txt  doc.in  doc.txt  local.txt  optional.txt  pip.txt  pip_tools.in  pip_tools.txt  production.in  production.txt  test.in  test.txt  tox.in  tox.txt  travis.txt
scripts/: build-stats-to-datadog.sh
server/: manage.py
server/edxapi/: urls.py  wsgi.py
service/: urls.py  wsgi.py
service/analyticsdata/: tests.py
service/settings/: base.py  production.py
share/: ec2.py  logging.cfg.j2  task.yml
static/css/: edx-swagger.css
templates/rest_framework_swagger/: index.html
(+146 files in other folders)
