[metadata]
name = edx.analytics.tasks
description-file = README.md

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    edx
data_files =
    share/edx.analytics.tasks = share/*

[entry_points]
console_scripts =
    launch-task = edx.analytics.tasks.main:main
    remote-task = edx.analytics.tasks.remote:main

edx.analytics.tasks =
    s3-copy = edx.analytics.tasks.s3:S3Copy
    s3-sync = edx.analytics.tasks.s3:S3Sync
    sync-events = edx.analytics.tasks.eventlogs:SyncEventLogs
    enrollments-report = edx.analytics.reports.enrollments:EnrollmentsByWeek
    course-enroll = edx.analytics.tasks.course_enroll:CourseEnrollmentTotalsPerDay
