[metadata]
name = edx.analytics.tasks
description-file = README.md

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    edx
data_files =
    share/edx.analytics.tasks = share/*

[entry_points]
console_scripts =
    launch-task = edx.analytics.tasks.launchers.main:main
    remote-task = edx.analytics.tasks.launchers.remote:main

edx.analytics.tasks =
    s3-copy = edx.analytics.tasks.s3:S3Copy
    s3-sync = edx.analytics.tasks.s3:S3Sync
    sync-events = edx.analytics.tasks.eventlogs:SyncEventLogs
    enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
    total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
    inc-enrollments-report = edx.analytics.tasks.reports.incremental_enrollments:WeeklyIncrementalUsersAndEnrollments
    course-enroll = edx.analytics.tasks.course_enroll:CourseEnrollmentChangesPerDay
    users-per-day = edx.analytics.tasks.user_registrations:UserRegistrationsPerDay

mapreduce.engine =
    hadoop = luigi.hadoop:DefaultHadoopJobRunner
    local = luigi.hadoop:LocalJobRunner
