[metadata]
name = edx.analytics.tasks
description-file = README.md

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    edx
data_files =
    share/edx.analytics.tasks = share/*

[entry_points]
console_scripts =
    launch-task = edx.analytics.tasks.launchers.local:main
    remote-task = edx.analytics.tasks.launchers.remote:main

edx.analytics.tasks =
    enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
    total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
    inc-enrollments-report = edx.analytics.tasks.reports.incremental_enrollments:WeeklyIncrementalUsersAndEnrollments
    course-enroll = edx.analytics.tasks.course_enroll:CourseEnrollmentChangesPerDay
    answer-dist = edx.analytics.tasks.answer_dist:AnswerDistributionPerCourse
    sqoop-import = edx.analytics.tasks.sqoop:SqoopImportFromMysql
    dump-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseTask
    export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
    last-country = edx.analytics.tasks.user_location:LastCountryForEachUser
    export-events = edx.analytics.tasks.event_exports:EventExportTask

mapreduce.engine =
    hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
    local = luigi.hadoop:LocalJobRunner
    emu = edx.analytics.tasks.mapreduce:EmulatedMapReduceJobRunner
